--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,18 +7,18 @@ workflows:
   version: 2
   build-chapter-8-exercise-1:
     jobs:
-      - brave/continuously_integrate
+      - brave/continuously_integrate:
           name: "chapter-8/exercise-1"
           working_directory: "chapter-8/exercise-1"
 
   build-chapter-8-exercise-2:
     jobs:
-      - brave/continuously_integrate
+      - brave/continuously_integrate:
           name: "chapter-8/exercise-2"
           working_directory: "chapter-8/exercise-2"
 
   build-chapter-8-exercise-3:
     jobs:
-      - brave/continuously_integrate
+      - brave/continuously_integrate:
           name: "chapter-8/exercise-3"
           working_directory: "chapter-8/exercise-3"
