--- a/.circleci/orbs/brave/jobs/continuously_integrate.yml
+++ b/.circleci/orbs/brave/jobs/continuously_integrate.yml
@@ -3,15 +3,7 @@ parameters:
     description: "directory in which a project.clj is located"
     default: "."
     type: "string"
-docker:
-  - image: circleci/clojure:lein-2.8.1
-
-working_directory: ~/repo
-
-environment:
-  LEIN_ROOT: "true"
-  # Customize the JVM maximum heap limit
-  JVM_OPTS: -Xmx3200m
+executor: brave/lein
 steps:
   - checkout
   - brave/dependencies:
