--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,15 +3,15 @@ workflows:
   version: 2
   build-chapter-8-exercise-1:
     jobs:
-    - chapter-8/exercise-1
+    - chapter-8-exercise-1
   build-chapter-8-exercise-2:
     jobs:
-    - chapter-8/exercise-2
+    - chapter-8-exercise-2
   build-chapter-8-exercise-3:
     jobs:
-    - chapter-8/exercise-3
+    - chapter-8-exercise-3
 jobs:
-  exercise-1:
+  chapter-8-exercise-1:
     docker:
     - image: circleci/clojure:lein-2.8.1
     working_directory: ~/repo
@@ -34,7 +34,7 @@ jobs:
     - run:
         command: lein test
         working_directory: chapter-8/exercise-1
-  exercise-2:
+  chapter-8-exercise-2:
     docker:
     - image: circleci/clojure:lein-2.8.1
     working_directory: ~/repo
@@ -57,7 +57,7 @@ jobs:
     - run:
         command: lein test
         working_directory: chapter-8/exercise-2
-  exercise-3:
+  chapter-8-exercise-3:
     docker:
     - image: circleci/clojure:lein-2.8.1
     working_directory: ~/repo
